Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -1601,7 +1601,10 @@ td.stores_pin{
         line-height: 30px;
         color: #555555;
     }
-    
+    input[type="submit"] {
+        cursor: pointer;
+        -webkit-appearance: button;
+    }
 }
 
 /********* simply-scroll-list *********/
