Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -1603,7 +1603,7 @@ td.stores_pin{
     }
     input[type="submit"] {
         cursor: pointer;
-        -webkit-appearance: button-bevel;
+        appearance: button;
     }
 }
 
