--- a/application.css
+++ b/application.css
@@ -1605,6 +1605,7 @@ td.stores_pin{
         cursor: pointer;
         -webkit-appearance: button;
         -moz-appearance: button;
+        background-color: buttonface;
     }
 }
 
