--- a/application.css
+++ b/application.css
@@ -1605,7 +1605,15 @@ td.stores_pin{
         cursor: pointer;
         -webkit-appearance: button;
         -moz-appearance: button;
-        background-color: buttonface;
+        color: buttontext;
+    background-color: buttonface;
+    box-sizing: border-box;
+    padding: 2px 6px 3px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: buttonface;
+    border-image: initial;
+}
     }
 }
 
