--- a/application.css
+++ b/application.css
@@ -1128,8 +1128,8 @@ a.btn-prime {
     color: inherit;
 }
 .check_hours {
-    font-size:1.5em;
-    font-size:1.2em\9;    
+    font-size: 1.5em;
+    font-size: 1.2em\9;    
     display: block;
     padding: 5px 0 0 10px;
 }
@@ -2287,7 +2287,7 @@ td.stores_pin{
     color:  black;  
 }
 .hour_box .check_hours {
-    color: #1c9798;
+    color: #000;
 }
 .feature_label, .long_feature_label {
     background-color: #1c9798;
