--- a/application.css
+++ b/application.css
@@ -1032,14 +1032,16 @@ a.btn-prime {
 .feature_label, .long_feature_label {
     margin: 0;
     color: white;
-    padding: 3px 10px 0;    
+    padding: 5px 10px 0;
     background-color: transparent;
-    height: 38px;   
-    font-family: inherit;
+    height: 38px;
+    font-family: futura_condensed;
     font-size: 2em;
     text-transform: uppercase;
     z-index: 900;
     width: 100%;
+    display: inline-block;
+    max-width: 100%;
 }
 .right_feature_box .feature_label {
     position: absolute;
