--- a/application.css
+++ b/application.css
@@ -688,7 +688,7 @@ legend{
 	border-bottom-color: white; 
 	border-top-color: white; 
 	background-color: white;
-    color:gray;   
+    color: #000;   
     font-size: 1.5em;
     font-weight: 100;
     height: auto;
