--- a/application.css
+++ b/application.css
@@ -1343,8 +1343,8 @@ hr{
 }
 #promo_details_container img,
 #event_details_container img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 /************** lightbox *************/
 .lightbox {
