Marlborough Mall 1.2  /application.css

--- a/application.css
+++ b/application.css
@@ -55,7 +55,9 @@ a:hover {
     text-decoration: none;
     color: inherit;
 }
-
+.margin_20 {
+    margin-bottom: 20px;
+}
 /* *** LOADER *** */
 .loader_backdrop{
     padding-top: 10%;
