--- a/application.css
+++ b/application.css
@@ -1551,8 +1551,7 @@ td.stores_pin{
     text-decoration: none;
 }
 .page_body img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
 }
 
 .page_body #contest_form {
