--- a/application.css
+++ b/application.css
@@ -1094,7 +1094,7 @@ a.btn-prime {
 }
 .hour_box{
     width: 100%;    
-    background-color:#d2d2d2;
+    background-color:#FFF;
     position:relative;
     z-index: 999;
     font-family: futura_condensed;
